--- a/lib/app/package.json
+++ b/lib/app/package.json
@@ -8,5 +8,8 @@
   },
   "keywords": [],
   "author": "Marc Harter <wavded@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "express": "^4.9.5"
+  }
 }
