--- a/lib/app/package.json
+++ b/lib/app/package.json
@@ -10,6 +10,7 @@
   "author": "Marc Harter <wavded@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.9.5"
+    "express": "^4.9.5",
+    "jade": "^1.7.0"
   }
 }
